# pet-project

./: .gitignore  .gitmodules  Dockerfile.nginx  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  nginx.conf  redis.conf
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
Dockerfiles/: Dockerfile.backend
backend/: .devcontainer.json  .dockerignore  Dockerfile  Pipfile  db.sqlite3  pyproject.toml  pytest.ini
backend/api/: serializers.py  urls.py  views.py
backend/api/serializers/: user.py
backend/api/services/: mail.py  url.py
backend/api/tests/: conftest.py  test_auth.py  test_token.py
backend/api/tests/auth/: conftest.py  factory.py  test_token.py  test_user.py
backend/api/urls/: __init__.py  token.py  user.py  users.py
backend/api/views/: user.py  users.py
backend/backend/: settings.py
backend/core/: settings.py
frontend/: .devcontainer.json  Dockerfile  angular.json  package.json
frontend/src/: main.ts
frontend/src/app/: app.component.ts  app.module.ts
frontend/src/app/components/header/: header.component.html
